Fix _posts not visible in high resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,13 @@ table {
 /**
  * Posts
  */
+@media screen and (min-width: 450px) {
+ .posts-content {
+  padding-left: 20%
+ }
+
+}
+
 .post-header {
   margin-bottom: 30px; }
 
